--- a/estilo/style.css
+++ b/estilo/style.css
@@ -1,3 +1,7 @@
+@charset "UTF-8";
+
+/* VERSÃO PARA MOBILE FIRST */
+
 /* Minhas fontes */
 
 @font-face {
@@ -42,7 +46,8 @@ body {
   'FILL' 1,
   'wght' 400,
   'GRAD' 0,
-  'opsz' 48
+  'opsz' 48;
+  padding-right: 10px;
 }
 
 /* Estilizando o header */
@@ -56,7 +61,7 @@ header {
 
 header h1 {
     font-family: var(--font-tech);
-    font-size: 4em;
+    font-size: 2.9em;
 }
 
 header h2 {
@@ -140,7 +145,8 @@ article img {
 }
 
 article img#janilo {
-    width: 300px;
+    width: 100%;
+    max-width: 300px;
     border-radius: 300px;
     display: block;
     margin: auto;
@@ -166,6 +172,55 @@ article ul#contatos {
     list-style-type: none;
     list-style-position: inside;
     padding: 0 30px;
+}
+
+/* Estilizando a sessão dos projetos */
+article section {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+article section div.projeto {
+    display: inline-block;
+    width: 240px;
+    text-align: center;
+    padding: 20px;
+    background-color: rgb(59, 59, 59);
+    margin: 0px 10px;
+    margin-bottom: 15px;
+    border-radius: 15px;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.719);
+    transition: 0.5s;
+}
+
+article section div.projeto img {
+    width: 100%;
+    margin: 0;
+    margin: 10px 0;
+}
+
+article section div.projeto h3 {
+    margin: 0;
+    font-size: 1.5em;
+    margin: 10px 0;
+}
+
+article section div.projeto p {
+    margin: 0;
+    text-align: center;
+    margin: 10px 0;
+    text-indent: 0px;
+}
+
+article section div.projeto a {
+    color: #8dc28d;
+    text-decoration: none;
+    font-size: 0.9em;
+}
+
+article section div.projeto a:hover {
+    text-decoration: underline;
 }
 
 /* Estilizando o footer */
