--- a/estilos/medias-queries.css
+++ b/estilos/medias-queries.css
@@ -1,5 +1,20 @@
 @charset "UTF-8";
 
+
+/* PARA TABLETS */
+@media screen and (min-width: 768px) and (max-width: 992px) {
+    nav {
+        padding: 15px;
+    }
+
+    nav a {
+        display: inline;
+        padding: 17px 20px 16px 20px;
+        border: none;
+        margin: 0;
+    }
+}
+
 /* PARA DESKTOPS */
 @media screen and (min-width: 992px) and (max-width: 1200px) {
     header h1 {
@@ -11,5 +26,16 @@
 @media screen and (min-width: 1200px) {
     header h1 {
         font-size: 4em;
+    }
+
+    nav {
+        padding: 15px 15px 15px 50px;
+    }
+
+    nav a {
+        display: inline;
+        padding: 17px 20px 16px 20px;
+        border: none;
+        margin: 0;
     }
 }
