--- a/estilos/medias-queries.css
+++ b/estilos/medias-queries.css
@@ -3,6 +3,10 @@
 
 /* PARA TABLETS */
 @media screen and (min-width: 768px) and (max-width: 992px) {
+    span#burguer {
+        display: none;
+    }
+
     nav {
         padding: 15px;
     }
@@ -17,13 +21,32 @@
 
 /* PARA DESKTOPS */
 @media screen and (min-width: 992px) and (max-width: 1200px) {
+    span#burguer {
+        display: none;
+    }
+
     header h1 {
         font-size: 4em;
+    }
+
+    nav {
+        padding: 15px;
+    }
+
+    nav a {
+        display: inline;
+        padding: 17px 20px 16px 20px;
+        border: none;
+        margin: 0;
     }
 }
 
 /* PARA TELAS EXTRA GRANDES */
 @media screen and (min-width: 1200px) {
+    span#burguer {
+        display: none;
+    }
+
     header h1 {
         font-size: 4em;
     }
