--- a/estilos/medias-queries.css
+++ b/estilos/medias-queries.css
@@ -1,5 +1,17 @@
 @charset "UTF-8";
 
+@media screen and (max-width: 600px) {
+    nav {
+        display: none;
+    }
+}
+
+@media screen and (min-width: 600px) and (max-width: 768px) {
+    nav {
+        display: none;
+    }
+}
+
 
 /* PARA TABLETS */
 @media screen and (min-width: 768px) and (max-width: 992px) {
