--- a/estilo/style.css
+++ b/estilo/style.css
@@ -37,7 +37,7 @@
 
 body {
     background-color: lightgray;
-    background-image: url("../imagens/tech-wallpaper.jpg");
+    background-image: url('../imagens/tech-wallpaper.jpg');
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -255,6 +255,8 @@ article section div.projeto p {
     text-align: center;
     margin: 10px 0;
     text-indent: 0px;
+    font-size: 0.8em;
+    line-height: 2em;
 }
 
 article section div.projeto a {
