--- a/estilo/style.css
+++ b/estilo/style.css
@@ -37,7 +37,6 @@
 
 body {
     background-color: lightgray;
-    background-image: url('../imagens/tech-wallpaper.jpg');
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -193,6 +192,36 @@ article img.icon {
 article p {
     text-align: justify;
     text-indent: 40px;
+}
+
+/* Estilizando a sessão da minha formação */
+section#formacao {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+section > div#info > ul {
+    columns: 1;
+    list-style-type: none;
+    display: block;
+    float: left;
+}
+
+section > div#imagem {
+    display: block;
+    align-items: center;
+    float: right;
+    width: 40%;
+    min-width: 280px;
+    height: 300px;
+    background-image: url('../imagens/infinity-school.jpg');
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+    margin: 20px;
+    border-radius: 15px;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.719);
 }
 
 article ul#contatos {
