--- a/estilo/style.css
+++ b/estilo/style.css
@@ -36,12 +36,7 @@
 }
 
 body {
-    background-color: lightgray;
-    background-image: url('../imagens/tech-wallpaper.jpg');
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-attachment: fixed;
+    background-color: rgb(113, 113, 113);
     color: white;
     font-family: var(--font-normal);
 }
@@ -127,7 +122,7 @@ span#burguer:hover {
 
 /* Estilizando o main */
 main {
-    max-width: 900px;
+    max-width: 1250px;
     background-color: #202020;
     margin: 0 auto 80px auto;
     padding: 20px;
@@ -254,6 +249,8 @@ article section#projetos {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
+    max-width: 1195px;
+    margin: auto;
 }
 
 article section div.projeto {
@@ -261,11 +258,9 @@ article section div.projeto {
     width: 240px;
     text-align: center;
     padding: 20px;
-    background-color: var(--cinza-claro);
+    background-color: #2a2a2a;
     margin: 0px 10px;
     margin-bottom: 15px;
-    border-radius: 10px;
-    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.719);
     transition: 0.5s;
     text-shadow: 2px 2px 1px black;
 }
@@ -279,7 +274,6 @@ article section div.projeto img {
 article section div.projeto img.projeto-img {
     width: 240px;
     height: 240px;
-    border-radius: 10px;
     box-shadow: 1px 1px 8px rgba(0, 0, 0, 0.247);
 }
 
